tester/testsuite/extensions/objects1/bad/bad005.jl
/* new undeclared class */

int main() {
	new Point;
	return 0;
}
